z-index fixes (#187)

--- a/css/mobiscroll.scroller.css
+++ b/css/mobiscroll.scroller.css
@@ -6,7 +6,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 99999;
+    z-index: 2;
     font-size: 12px;
     text-shadow: none;
     -webkit-backface-visibility: hidden;
@@ -48,9 +48,12 @@
     position: absolute;
     top: 0;
     left: 0;
+}
+.dw-persp {
     z-index: 99998;
 }
 .dwo {
+    z-index: 1;
     background: #000;
     background: rgba(0,0,0,.7);
     filter: Alpha(Opacity=70);
